# services/api/openapi.json
@@ -479,6 +479,14 @@
             "type" : "integer",
             "format" : "int64"
           }
+        }, {
+          "name" : "includeRevoked",
+          "in" : "query",
+          "required" : false,
+          "schema" : {
+            "type" : "boolean",
+            "default" : false
+          }
         } ],
         "responses" : {
           "200" : {
